WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
26067
Chromium build broken by IntSize change
https://bugs.webkit.org/show_bug.cgi?id=26067
Summary
Chromium build broken by IntSize change
Brett Wilson (Google)
Reported
2009-05-28 13:30:43 PDT
https://bugs.webkit.org/show_bug.cgi?id=8736
broke the Chromium build which has stricter warnings. The addition of scale() to IntSize implicitly casts a float to int. Simon, are you sure this shouldn't round to nearest rather than round down?
Attachments
Patch
(1.08 KB, patch)
2009-05-28 13:46 PDT
,
Brett Wilson (Google)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brett Wilson (Google)
Comment 1
2009-05-28 13:46:57 PDT
Created
attachment 30748
[details]
Patch
Brett Wilson (Google)
Comment 2
2009-05-28 14:15:10 PDT
Checked in as 44252
Brett Wilson (Google)
Comment 3
2009-05-28 14:15:33 PDT
Comment on
attachment 30748
[details]
Patch Simon, it would still be nice if you could check this after the fact.
Simon Fraser (smfr)
Comment 4
2009-05-28 14:23:59 PDT
This change is fine. I followed IntRect::scale(), which uses C-style casts.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug