2009-05-28  Brett Wilson  <brettw@chromium.org>

Unreviewed, build fix.

    https://bugs.webkit.org/show_bug.cgi?id=26067

    Add casts for scale function to make more explicit what is happening
    and fix a compiler warning.

    * platform/graphics/IntSize.h:
      (WebCore::IntSize::scale):


git-svn-id: svn://svn.chromium.org/blink/trunk@44252 bbb929c8-8fbe-4397-9dbb-9b2b20218538