third_party/WebKit/WebCore/platform/graphics/IntSize.h
@@ -76,8 +76,8 @@ public:
     
     void scale(float scale)
     {
-        m_width *= scale;
-        m_height *= scale;
+        m_width = static_cast<int>(static_cast<float>(m_width) * scale);
+        m_height = static_cast<int>(static_cast<float>(m_height) * scale);
     }
     
     IntSize expandedTo(const IntSize& other) const
